fixing layout problem with the height of a line

--- a/slickqaweb/static/resources/pages/testruns/testruns.less
+++ b/slickqaweb/static/resources/pages/testruns/testruns.less
@@ -1,5 +1,6 @@
 .testruns-list-column-container {
   .flex-container;
+  min-height: .3in;
 }
 
 @keyframes to-one-inch-width {
